<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent=".15"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent=".45"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/LMP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/lmp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LMP_input"
        android:layout_width="0dp"
        android:inputType="date"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide2"
        app:layout_constraintTop_toTopOf="@id/LMP"
        app:layout_constraintBottom_toBottomOf="@id/LMP"
        android:hint="@string/enter_lmp_here"
        android:autofillHints="" />

    <TextView
        android:id="@+id/Todaysdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/today_s_date"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/LMP" />

    <EditText
        android:id="@+id/TD_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@id/guide2"
        app:layout_constraintTop_toTopOf="@id/Todaysdate"
        app:layout_constraintBottom_toBottomOf="@id/Todaysdate"
        android:hint="@string/enter_today_s_date_here"
        android:autofillHints="" />

    <TextView
        android:id="@+id/EGA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ega"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/Todaysdate" />

    <TextView
        android:id="@+id/EGA_output"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide2"
        app:layout_constraintTop_toTopOf="@id/EGA"
        app:layout_constraintBottom_toBottomOf="@id/EGA"/>

    <TextView
        android:id="@+id/EDD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/edd"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/EGA" />

    <TextView
        android:id="@+id/EDD_output"
        android:layout_width="160dp"
        android:hint="@string/result"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide2"
        app:layout_constraintTop_toTopOf="@id/EDD"
        app:layout_constraintBottom_toBottomOf="@id/EDD"/>

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EDD"/>


</androidx.constraintlayout.widget.ConstraintLayout>